--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 }
 body {
     transition: background-color 0.5s ease;
+    overflow: hidden;
   }
 #main{
     min-height: 100vh;
@@ -81,10 +82,68 @@ width: 10%;
 #middle #social-links a:hover{
     transform: scale(1.4);
 }
+
+.dialogue{
+    display: none;
+    position: fixed;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    background-color: rgb(235, 242, 245);
+    padding: 20px;
+    border: 2px solid black;
+    border-radius: 5px;
+    animation: slideIn 0.5s ease-in-out forwards;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    
+  }
+.block{
+    display: none;
+}
+  .dialogue p{
+    padding: 25px;
+  }
+
+  .dialogue a{
+    text-decoration: none;
+    color: black;
+    padding: 10px;
+    border: 1px solid silver;
+    border-radius: 15px;
+    cursor: pointer;
+  }
+  
+
+
+
+  @keyframes slideIn {
+    from {
+      transform: translate(-50%, 100%);
+      opacity: 0;
+    }
+    to {
+      transform: translate(-50%, 0);
+      opacity: 1;
+    }
+  }
+  
+
+
+
+
+
+
+
+
 @keyframes moveUpDown {
     0% {
       transform: translateY(0); 
     }
+
     50% {
       transform: translate(10px); 
     }
@@ -93,9 +152,32 @@ width: 10%;
     }
   }
 
+
+  #footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 90px;
+    gap: 1rem;
+    transform: translateY(-210px);
+    
+  }
+
+  .footer-icons{
+    border: 1px solid black;
+    border-radius: 50%;
+    height: 40px;
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+  }
+
 @media (max-width:600px){
     body{
         min-width: 100%;
+        overflow: visible;
     }
     #first{
         display: flex;
@@ -106,12 +188,25 @@ width: 10%;
     #right, #left{
         width: 90%;
         transform: translate(0);
+    }
+    #footer{
+        margin: 20px;
+        transform: translate(0);
+    }
+
+    .dialogue{
+        width: 90%;
+    }
+
+    .dialogue p{
+        width: 100%;
     }
 }
 
 @media (max-width:768px){
     body{
         min-width: 100%;
+        overflow: visible;
     }
     #first{
         display: flex;
@@ -123,10 +218,22 @@ width: 10%;
         width: 90%;
         transform: translate(0);
     }
+    #footer{
+        transform: translate(0);
+        margin: 20px;
+    }
+    .dialogue{
+        width: 90%;
+    }
+
+    .dialogue p{
+        width: 100%;
+    }
 }
 @media (max-width:1024px){
     body{
         min-width: 100%;
+        overflow: visible;
     }
     #first{
         display: flex;
@@ -137,6 +244,17 @@ width: 10%;
     #right, #left{
         width: 90%;
         transform: translate(0);
+    }
+    #footer{
+        transform: translate(0);
+        margin: 20px;
+    }
+    .dialogue{
+        width: 90%;
+    }
+
+    .dialogue p{
+        width: 100%;
     }
 }
 
